# TV3-PX4-Extension

./: .gitignore  README.md  pyproject.toml  requirements-bench.txt  requirements-viz.txt
src/: CMakeLists.txt
src/gazebo_plugins/tv3_rocket/: CMakeLists.txt  Tv3RocketSystem.cpp  Tv3RocketSystem.hpp
src/lib/: tv3_engine_geometry.hpp  tv3_module_fsm.hpp  tv3_module_modes.hpp  tv3_motor_curve.cpp  tv3_motor_curve.hpp  tv3_msg_fields.hpp
src/lib/tv3/: CMakeLists.txt  tv3_engine_geometry.hpp  tv3_plant_kinematics.cpp  tv3_plant_kinematics.hpp  tv3_projected_gradient.cpp
src/modules/control_mixer/: CMakeLists.txt  rocket_att_control.cpp  tv3_att_control.cpp
src/modules/flight_modes/: CMakeLists.txt  rocket_mode_manager.cpp  rocket_params.c  tv3_mode_manager.cpp  tv3_params.c
src/modules/guidance/: CMakeLists.txt  rocket_guidance.cpp  tv3_guidance.cpp
src/modules/propulsion/: CMakeLists.txt
src/modules/sensing/: CMakeLists.txt
src/modules/tv3_attitude/: CMakeLists.txt  tv3_attitude.cpp  tv3_attitude_controller.cpp  tv3_attitude_controller.hpp  tv3_attitude_fsm.cpp  tv3_attitude_fsm.hpp
src/modules/tv3_control_mixer/: CMakeLists.txt  tv3_control_mixer.cpp  tv3_control_mixer_core.cpp  tv3_control_mixer_core.hpp  tv3_control_mixer_fsm.cpp  tv3_control_mixer_fsm.hpp  tv3_control_mixer_lm.cpp  tv3_control_mixer_lm.hpp  tv3_control_mixer_plant.cpp  tv3_control_mixer_plant.hpp  tv3_gimbal_authority.cpp  tv3_gimbal_authority.hpp  tv3_gimbal_lm.cpp  tv3_gimbal_lm.hpp  tv3_gimbal_plant.cpp  tv3_gimbal_plant.hpp
src/modules/tv3_guidance/: CMakeLists.txt  (+3 more)
(+256 files in other folders)
